--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,25 @@
 </head>
 
 <body>
-	<h1>Taskie</h1>
+	<header class="container">
+		<nav class="navbar navbar-default">
+			<div class="navbar-head">
+				<a href="#" class="navbar-brand">
+					Taskie
+				</a>
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-rigth">
+					
+				</ul>
+			</div>
+		</nav>
+	</header>
 
-{{> lista}}
+	<main class="container">
+		
+		{{> lista}}
+
+	</main>
 
 </body>
