--- a/client/lista/lista.html
+++ b/client/lista/lista.html
@@ -1,13 +1,19 @@
 <template name="lista">
 	
-	<ul>
-		
-		{{#each tarefas}}
-		
-		<li>{{nome}}</li>
+	<div class="row">
+		<div class="col-xs-12">
 
-		{{/each}}
-
-	</ul>
-
+			{{#each tarefas}}
+			<div class="row">
+				<div class="col-xs-11">
+					{{formataData}} - {{nome}}
+				</div>
+				<div class="col-xs-1">
+					<button class="btn btn-danger">Excluir</button>
+				</div>
+			</div>
+			<hr>
+			{{/each}}
+		</div>
+	</div>
 </template>
